--- a/Login.css
+++ b/Login.css
@@ -3,11 +3,10 @@ margin:100px;padding: 50px;
 width: 20%;
 align-content: center;
 }
-
-body{background-image: url('360_F_123731572_KMfBEkpbRlfQj1ypdPVwv4W0r27B9hVJ.webp');
+body{background-image: url('gray.jpg');
 background-repeat: no-repeat;
-background-size: 150%;
+
 }
 input{border-radius: 5px;
 display: inline-block;}
-input[type="submit"]{background-color:darkseagreen;border-radius:5px;}
+input[type="submit"]{background-color:gray;border-radius:5px;}
